Added stats calculations at the end of pup_centering.py to print
means, median, std, and RMS.  Also make yx plots.


*****  Sun Dec 10 16:29:52 CET 2017  *****

Added MC3 submodule.

*****

Added background() and rawflux() to plots module.
Generate raw flux and background plots at the end of pup_photom.py.


*****  Sun Jan 28 17:56:23 CET 2018  *****

Added models module with lightcurve models.
Added linramp(), mandelecl(), and bliss() light-curve models.
TBD: Need to doublecheck bliss model works.


*****  So 18. Feb 18:21:45 CET 2018  *****

Implemented linramp, quadramp, expramp, mandelecl, mandeltr, and bliss
light-curve models.

*****

Added tools.cat(), a shorthand for numpy concatenate.
Removed tools.parray().

*****

Added parse.py file which implements tools.parse_model() to handle the
light-cruve modeling configuration files.
It also implements tools.parray().

*****

Added paramedit.py which implements tools.loadparams() to read-in
light-curve model parameters, bounds, and stepsizes.

*****

Added pup_model.py which implements the Model() and Fit() clasess
(for light-curve modeling).  It also implements the puppies.setup()
method, which prepares the code for a light-curve fitting/posterior
sampling.

TBI in this file: the fit() and mcmc() methods, which do the
least-square optimization and posterior sampling of the light-curve
modeling.


*****  So 25. Feb 18:54:17 CET 2018  *****

Implemented pup_model.fit(). Need to tie some loose ends (write file,
output, pickle file).
Sorted out variables in pup_model.setup().
Cleaned up pup_model.evalmodel().
Enabled chiscale and optimizer arguments for light-curve modeling.

*****

Implemented sigrej at the begining of pup_model.setup().
Need to think what to do if the data veries significantly from stat to
end, messing up the sigma rejection (do piecewise?, what's a good
recipe for this).
Also could do a sigrej from the residuals, after an initial fit
(consider if fit fails, it may mess up things as well).

*****
